--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,32 @@
 					<release>16</release>
 				</configuration>
 			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-shade-plugin</artifactId>
+				<version>2.3</version>
+				<executions>
+					<execution>
+						<phase>package</phase>
+						<goals>
+							<goal>shade</goal>
+						</goals>
+						<configuration>
+							<artifactSet>
+								<includes>
+									<include>org.mongodb</include>
+									<include>org.mongodb.morphia</include>
+									<include>com.twilio</include>
+									<include>com.twilio.sdk</include>
+									<include>com.fasterxml</include>
+									<include>com.fasterxml.jackson</include>
+								</includes>
+							</artifactSet>
+							<createDependencyReducedPom>false</createDependencyReducedPom>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
 		</plugins>
 	</build>
 
@@ -27,6 +53,15 @@
 			<id>worldql-partners</id>
 			<url>https://maven.worldql.com/releases</url>
 		</repository>
+		<repository>
+			<id>twilio</id>
+			<url>https://mvnrepository.com/artifact/com.twilio.sdk/twilio</url>
+		</repository>
+		<repository>
+			<id>jackson-datatype-jsr310</id>
+			<url>https://mvnrepository.com/artifact/com.fasterxml.jackson.datatype/jackson-datatype-jsr310</url>
+		</repository>
+
 	</repositories>
 
 	<dependencies>
@@ -34,7 +69,7 @@
 		<dependency>
 			<groupId>com.nftworlds</groupId>
 			<artifactId>wrld-payments-api</artifactId>
-			<version>0.1.6</version>
+			<version>0.2.0</version>
 		</dependency>
 
 		<dependency>
@@ -43,6 +78,22 @@
 			<version>1.17.1-R0.1-SNAPSHOT</version>
 			<scope>provided</scope>
 		</dependency>
+		<dependency>
+			<groupId>net.luckperms</groupId>
+			<artifactId>api</artifactId>
+			<version>5.4</version>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.mongodb.morphia</groupId>
+			<artifactId>morphia</artifactId>
+			<version>1.3.2</version>
+		</dependency>
 
+		<dependency>
+			<groupId>org.mongodb</groupId>
+			<artifactId>mongo-java-driver</artifactId>
+			<version>3.4.2</version>
+		</dependency>
 	</dependencies>
 </project>
